--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                                 <br>
                                 tel. +56974533824
                                 <br>
-                                mail. leslyapp.cl@gmail.com
+                                mail. hola@lesly.cl
                             </div>
                             <!-- Brand Logo start-->
 
