--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <!-- btn start -->
                             <div class="col-lg-4 col-md-4 col-sm-6 pl-md-0 pl-sm-12 flex-y-center">
                                 <a class="btn btn-xl btn-dodgerblue rounder-5 font-size-7 letter-spacing-np9 btn-lg px-lg-9 px-7 py-5 mb-md-0 mb-sm-8"
-                                    href="https://forms.gle/npU4VL3CMkviwa1j6" target="_blank">Solicita ahora</a>
+                                    href="https://forms.gle/Xk1WaLEzaEy51aW3A" target="_blank">Solicita ahora</a>
                             </div>
                             <!-- btn end -->
                         </div>
@@ -142,7 +142,7 @@
                             <!-- content-2 section-title end -->
                             <ul class="list-unstyled pl-0">
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">1.-</span> Ingresa los datos de
+                                    <span class="font-weight-bold text-dodgerblue mr-6">1.-</span>Ingresa los datos de
                                     la propiedad.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
@@ -414,7 +414,7 @@
                                 class="font-size-13">2,5 UF + iva.</span></h4>
                         <!-- features-1 section-title end -->
                         <div class="btn-area">
-                            <a href="https://forms.gle/npU4VL3CMkviwa1j6" target="_blank"
+                            <a href="https://forms.gle/Xk1WaLEzaEy51aW3A" target="_blank"
                                 class="btn btn-xxl font-size-7 text-white letter-spacing-n1 font-weight-bold border-white border-width-2 text-capitalize mb-3"></i>Solicitar
                                 Servicio</a>
                         </div>
