--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
                             <!-- content-2 section-title end -->
                             <ul class="list-unstyled pl-0">
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">1.-</span>Ingresa los datos de
+                                    <span class="font-weight-bold text-dodgerblue mr-6">1.</span>Ingresa los datos de
                                     la propiedad.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">2.-</span>Nos conectamos a
+                                    <span class="font-weight-bold text-dodgerblue mr-6">2.</span>Nos conectamos a
                                     distintas fuentes de información.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">3.-</span>Enviamos tu informe
+                                    <span class="font-weight-bold text-dodgerblue mr-6">3.</span>Enviamos tu informe
                                     con la documentación que necesitas.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">4.-</span>¡Listo! Relájate.
+                                    <span class="font-weight-bold text-dodgerblue mr-6">4.</span>¡Listo! Relájate.
                                 </li>
                             </ul>
                         </div>
