--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <link rel="stylesheet" href="./plugins/theme-mode-switcher/switcher-panel.css">
     <link rel="stylesheet" href="css/main.css">
     <!-- Custom stylesheet -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-194183240-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-194183240-1');
+</script>
 </head>
 
 <body data-theme="light">
