--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="description" content="El estudio de tu propiedad en una semana">
+<meta property="og:title" content="Lesly" />
+<meta property="og:url" content="https://www.lesly.cl" />
+<meta property="og:description" content="El estudio de tu propiedad en una semana">
+<meta property="og:image" content="//cdn.example.com/uploads/images/webpage_300x200.png">
     <title>Lesly</title>
     <link rel="shortcut icon" href="image/png/favicon.png" type="image/x-icon">
     <!-- Bootstrap , fonts & icons  -->
