--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:title" content="Lesly" />
 <meta property="og:url" content="https://www.lesly.cl" />
 <meta property="og:description" content="El estudio de tu propiedad en una semana">
-<meta property="og:image" content="//cdn.example.com/uploads/images/webpage_300x200.png">
+<meta property="og:image" content="https://www.lesly.cl/image/png/img.png">
     <title>Lesly</title>
     <link rel="shortcut icon" href="image/png/favicon.png" type="image/x-icon">
     <!-- Bootstrap , fonts & icons  -->
