--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
                                     <span style="font-size: 1.5em;">Lesly</span>
                                 </a>
                                 <br>
-                                tel. +56974533824
+                                2021, Lesly SpA
                                 <br>
-                                mail. hola@lesly.cl
+                                hola@lesly.cl
                             </div>
                             <!-- Brand Logo start-->
 
