--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
                         <!-- hero area section title start -->
                         <h1
                             class="font-size-18 font-family-1 font-wieght-extra-bold heading-default-color letter-spacing-n3 line-height-1p228 mb-11 ">
-                            Obtén los antecedentes de tu futura propiedad rápidamente</h1>
+                            El estudio de tu futura propiedad, sin esperas</h1>
                         <!-- hero area section title end -->
                         <div class="row">
                             <!-- hero area content start -->
                             <div class="col-lg-8 col-md-8 col-sm-10 pr-md-6 pr-sm-0">
                                 <p
                                     class="font-size-9 letter-spacing-np4 line-height-1p714 position-relative pr-xl-14 pr-lg-0 pr-md-9 pl-lg-11 pl-9">
-                                    Recopilamos y evaluamos la documentación que necesitas para que no tengas que
-                                    hacerlo. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
+                                    Haz una invesión segura con el informe de Lesly, conociendo el historial de la propiedad usada que estás buscando comprar. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
                                 </p>
                             </div>
                             <!-- hero area content end -->
@@ -127,8 +126,7 @@
                             <!-- content-1 section-title start -->
                             <h2
                                 class="font-size-14 font-family-1 letter-spacing-n2p53 line-height-1p3 font-wieght-bold mb-lg-13 mb-7 pr-xl-0 pr-lg-9 pr-md-9 pr-sm-19">
-                                Te entregamos en pocos días un informe con los antecedentes de la propiedad usada que
-                                quieres comprar.
+                                Te entregamos en pocos días un Informe con todos los antecedentes de la propiedad.
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-11 pr-lg-12">Recopilamos y evaluamos la
                                 documentación que necesitas para que no tengas que hacerlo.
@@ -210,13 +208,11 @@
                                 ¿Qué obtengo?
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">Un
-                                informe detallado de la propiedad usada que quieres comprar, acompañado de los
-                                antecedentes legales de ésta. Con nosotros olvídate de procesos engorrosos y largas
-                                esperas</p>
+                                informe detallado de la propiedad, donde sabrás quién es el dueño actual y si hay hipotecas o prohibiciones que afectan al
+                                bien raíz. Revisar si es que existen deudas asociadas, futuras
+                                expropiaciones, entre más información</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
-                                Conocerás quién es el dueño actual de la propiedad y si hay gravámenes que afectan al
-                                bien raíz. Además, podrás revisar si es que existen deudas asociadas, futuras
-                                expropiaciones, entre otros certificados. </p>
+                                ¿Como el informe de los autos? Sí, un estudio de títulos igual de rápido y seguro. Basado en fuentes oficiales y pasado bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
                         </div>
                         <!-- content-3 end -->
@@ -239,8 +235,7 @@
                                         Revisa qué documentos te enviamos.
                                     </h2>
                                     <p class="font-size-9 letter-spacing-np4 gr-color-white-opacity-9 mb-lg-15 px-lg-9">
-                                        Te enviaremos los siguientes documentos además de un Informe con evaluación de
-                                        los antecedentes de la propiedad.
+                                        Además del nuestro Informe, te enviaremos los siguientes documentos sin costos adicionales.
                                     </p>
                                 </div>
                                 <!-- content-1 section-title end -->
@@ -398,7 +393,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            10. Escrituras respectivas que acrediten personería si las hay.</h5>
+                                            10. Escrituras respectivas que acrediten personería si es el caso.</h5>
 
                                     </div>
                                     <!-- media-body end -->
@@ -425,7 +420,7 @@
                             class="font-size-17 font-family-1 font-weight-bold letter-spacing-n2p53 line-height-48 text-white mb-7">
                             Comienza ahora</h3>
                         <h4 class="text-white font-size-7 letter-spacing-np4 line-height-1p7 mb-13 px-md-12">Solicita
-                            los antecedentes de tu futura propiedad y olvídate de la eterna espera por <span
+                            los antecedentes de tu futura propiedad y olvídate del trámite. por <span
                                 class="font-size-13">2,5 UF + iva.</span></h4>
                         <!-- features-1 section-title end -->
                         <div class="btn-area">
