--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="col-lg-8 col-md-8 col-sm-10 pr-md-6 pr-sm-0">
                                 <p
                                     class="font-size-9 letter-spacing-np4 line-height-1p714 position-relative pr-xl-14 pr-lg-0 pr-md-9 pl-lg-11 pl-9">
-                                    Haz una invesión segura con el informe de Lesly, conociendo el historial de la propiedad usada que estás buscando comprar. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
+                                    Haz una invesión segura con el Informe de Lesly, conociendo el historial de la propiedad usada que estás buscando comprar. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
                                 </p>
                             </div>
                             <!-- hero area content end -->
@@ -163,7 +163,7 @@
                                     distintas fuentes de información.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">3.</span>Enviamos tu informe
+                                    <span class="font-weight-bold text-dodgerblue mr-6">3.</span>Enviamos tu Informe
                                     con la documentación que necesitas.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
