--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
                                 ¿Qué obtengo?
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">Un
-                                informe detallado de la propiedad, donde sabrás quién es el dueño actual y si hay hipotecas o prohibiciones que afectan al
-                                bien raíz. Revisar si es que existen deudas asociadas, futuras
+                                Informe detallado de la propiedad, donde sabrás quién es el dueño actual y si hay hipotecas o prohibiciones que afectan al
+                                bien raíz. Revisar si existen deudas asociadas o futuras
                                 expropiaciones, entre más información</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
-                                ¿Como el informe de los autos? Sí, un estudio de títulos igual de rápido y seguro. Basado en fuentes oficiales y pasado bajo la lupa de nuestros abogados. </p>
+                                ¿Como el Informe de los autos? Sí, un estudio de títulos igual de rápido y seguro, basado en fuentes oficiales y analizado bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
                         </div>
                         <!-- content-3 end -->
