--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">Un
                                 Informe detallado de la propiedad, donde sabrás quién es el dueño actual y si hay hipotecas o prohibiciones que afectan al
-                                bien raíz. Revisar si existen deudas asociadas o futuras
+                                bien raíz. Podrás revisar si existen deudas asociadas o futuras
                                 expropiaciones, entre más información</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
-                                ¿Como el Informe de los autos? Sí, un estudio de títulos igual de rápido y seguro, basado en fuentes oficiales y analizado bajo la lupa de nuestros abogados. </p>
+                                ¿Como el Informe de los autos? Sí, un estudio de títulos de la propiedad igual de rápido y seguro, basado en fuentes oficiales y analizado bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
                         </div>
                         <!-- content-3 end -->
@@ -235,7 +235,7 @@
                                         Revisa qué documentos te enviamos.
                                     </h2>
                                     <p class="font-size-9 letter-spacing-np4 gr-color-white-opacity-9 mb-lg-15 px-lg-9">
-                                        Además del nuestro Informe, te enviaremos los siguientes documentos sin costos adicionales.
+                                        Además de nuestro Informe, te enviaremos los siguientes documentos que puedes necesitar si estás tramitando tu crédito hipotecario. 
                                     </p>
                                 </div>
                                 <!-- content-1 section-title end -->
