--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                                     distintas fuentes de información.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">3.</span>Enviamos tu Informe
+                                    <span class="font-weight-bold text-dodgerblue mr-6">3.</span>Aramamos tu Informe
                                     con la documentación que necesitas.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">4.</span>¡Listo! Relájate.
+                                    <span class="font-weight-bold text-dodgerblue mr-6">4.</span>¡Listo! Relájate, te lo enviaremos antes de que termines tu serie.
                                 </li>
                             </ul>
                         </div>
