--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">Un
                                 Informe detallado de la propiedad, donde sabrás quién es el dueño actual y si hay hipotecas o prohibiciones que afectan al
                                 bien raíz. Podrás revisar si existen deudas asociadas o futuras
-                                expropiaciones, entre más información</p>
+                                expropiaciones, entre más información.</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
                                 ¿Como el Informe de los autos? Sí, un estudio de títulos de la propiedad igual de rápido y seguro, basado en fuentes oficiales y analizado bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
