--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <!-- content-1 section-title start -->
                             <h2
                                 class="font-size-14 font-family-1 letter-spacing-n2p53 line-height-1p3 font-wieght-bold mb-lg-13 mb-7 pr-xl-0 pr-lg-9 pr-md-9 pr-sm-19">
-                                Te entregamos en pocos días un Informe con todos los antecedentes de la propiedad.
+                                Te entregamos en pocos días un Informe con todos los antecedentes de la propiedad
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-11 pr-lg-12">Recopilamos y evaluamos la
                                 documentación que necesitas para que no tengas que hacerlo.
@@ -232,10 +232,10 @@
                                 <div class="section-title mb-lg-25 mb-15">
                                     <h2
                                         class="font-size-14 font-family-1 line-height-1p3 font-wieght-bold text-white mb-7 pr-lg-0 pr-md-22">
-                                        Revisa qué documentos te enviamos.
+                                        Revisa qué documentos te enviamos
                                     </h2>
                                     <p class="font-size-9 letter-spacing-np4 gr-color-white-opacity-9 mb-lg-15 px-lg-9">
-                                        Además de nuestro Informe, te enviaremos los siguientes documentos que puedes necesitar si estás tramitando tu crédito hipotecario. 
+                                        Además de nuestro Informe Lesly, te enviaremos los siguientes documentos que puedes necesitar si estás tramitando tu crédito hipotecario. 
                                     </p>
                                 </div>
                                 <!-- content-1 section-title end -->
