--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                         Revisa qué documentos te enviamos
                                     </h2>
                                     <p class="font-size-9 letter-spacing-np4 gr-color-white-opacity-9 mb-lg-15 px-lg-9">
-                                        Además de nuestro Informe, te enviaremos los siguientes documentos que puedes necesitar si estás tramitando tu crédito hipotecario. 
+                                        Además de nuestro Informe, te enviaremos los siguientes documentos que puedes necesitar si vas a tramitar un crédito hipotecario. 
                                     </p>
                                 </div>
                                 <!-- content-1 section-title end -->
