--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             class="font-size-17 font-family-1 font-weight-bold letter-spacing-n2p53 line-height-48 text-white mb-7">
                             Comienza ahora</h3>
                         <h4 class="text-white font-size-7 letter-spacing-np4 line-height-1p7 mb-13 px-md-12">Solicita
-                            los antecedentes de tu futura propiedad y olvídate del trámite y la espera por <span
+                            los antecedentes de tu futura propiedad y olvídate del trámite. Con todo medio de pago por<span
                                 class="font-size-13">2,5 UF + iva.</span></h4>
                         <!-- features-1 section-title end -->
                         <div class="btn-area">
