--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h1
                             class="font-size-18 font-family-1 font-wieght-extra-bold heading-default-color letter-spacing-n3 line-height-1p228 mb-11 ">
                             El estudio de tu futura propiedad, 
-                            sin esperas</h1>
+                            sin espera</h1>
                         <!-- hero area section title end -->
                         <div class="row">
                             <!-- hero area content start -->
