--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
                         <h1
                             class="font-size-18 font-family-1 font-wieght-extra-bold heading-default-color letter-spacing-n3 line-height-1p228 mb-11 ">
                             El estudio de tu futura propiedad, 
-                            sin espera</h1>
+                            sin esperas</h1>
                         <!-- hero area section title end -->
                         <div class="row">
                             <!-- hero area content start -->
                             <div class="col-lg-8 col-md-8 col-sm-10 pr-md-6 pr-sm-0">
                                 <p
                                     class="font-size-9 letter-spacing-np4 line-height-1p714 position-relative pr-xl-14 pr-lg-0 pr-md-9 pl-lg-11 pl-9">
-                                    Haz una inversión segura con el Informe de Lesly, conociendo el historial completo de la propiedad usada que estás buscando comprar. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
+                                    Haz una inversión segura con el Informe de Lesly. Conoce el historial completo de la propiedad que estás buscando comprar. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
                                 </p>
                             </div>
                             <!-- hero area content end -->
