--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 bien raíz. Podrás revisar si existen deudas asociadas o futuras
                                 expropiaciones, entre más información.</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
-                                ¿Como el informe de los autos? Sí, obtendrás un estudio de títulos de la propiedad igual de rápido y seguro, basado en fuentes oficiales y analizado bajo la lupa de nuestros abogados. </p>
+                                ¿Es como un estudio de títulos? Sí, es exactamente un estudio de títulos pero más rápido y seguro. Nos basamos en fuentes oficiales y analizamos la información bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
                         </div>
                         <!-- content-3 end -->
