--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     con la documentación que necesitas.
                                 </li>
                                 <li class="font-weight-normal font-size-10 text-default-color-2 border-0 d-flex mb-5">
-                                    <span class="font-weight-bold text-dodgerblue mr-6">4.</span>Listo, relájate! Te lo enviaremos antes de que termines tu serie.
+                                    <span class="font-weight-bold text-dodgerblue mr-6">4.</span>Listo! Te lo enviaremos antes de que termines de ver tu serie.
                                 </li>
                             </ul>
                         </div>
