--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="col-lg-8 col-md-8 col-sm-10 pr-md-6 pr-sm-0">
                                 <p
                                     class="font-size-9 letter-spacing-np4 line-height-1p714 position-relative pr-xl-14 pr-lg-0 pr-md-9 pl-lg-11 pl-9">
-                                    Haz una inversión segura con el Informe de Lesly. Conoce el historial completo de la propiedad que estás buscando comprar. <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
+                                    Conoce el historial completo de la propiedad que estás buscando comprar y haz una inversión segura con el Informe de Lesly. . <span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
                                 </p>
                             </div>
                             <!-- hero area content end -->
