--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                         <!-- hero area section title start -->
                         <h1
                             class="font-size-18 font-family-1 font-wieght-extra-bold heading-default-color letter-spacing-n3 line-height-1p228 mb-11 ">
-                            El estudio de tu futura propiedad, 
-                            sin esperas</h1>
+                            El estudio de tu propiedad en un Informe 
+                            y sin esperas</h1>
                         <!-- hero area section title end -->
                         <div class="row">
                             <!-- hero area content start -->
                             <div class="col-lg-8 col-md-8 col-sm-10 pr-md-6 pr-sm-0">
                                 <p
                                     class="font-size-9 letter-spacing-np4 line-height-1p714 position-relative pr-xl-14 pr-lg-0 pr-md-9 pl-lg-11 pl-9">
-                                    Conoce el historial completo de la propiedad que estás buscando comprar y haz una inversión segura con el Informe de Lesly.<span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
+                                    Conoce el historial completo de la propiedad que estás buscando y toma una decisión segura con el Informe de Lesly.<span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
                                 </p>
                             </div>
                             <!-- hero area content end -->
@@ -154,7 +154,7 @@
                                 Te entregamos en pocos días un Informe con todos los antecedentes de la propiedad
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-11 pr-lg-12">Recopilamos y evaluamos la
-                                documentación que necesitas para que no tengas que hacerlo.
+                                documentación que necesitas en menos de una semana para que no tengas que hacerlo, solo ingresando la dirección que quieres consultar. 
                             <p>
                                 <!-- content-1 section-title end -->
                         </div>
@@ -237,7 +237,7 @@
                                 bien raíz. Podrás revisar si existen deudas asociadas o futuras
                                 expropiaciones, entre más información.</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
-                                ¿Es como un estudio de títulos? Sí, es exactamente un estudio de títulos pero más rápido y aterrizado. Nos conectamos a fuentes oficiales y analizamos la información bajo la lupa de nuestros abogados. </p>
+                                ¿Es como un estudio de títulos? Sí, pero todo en un Informe más rápido y aterrizado. Nos conectamos a fuentes oficiales y analizamos la información bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
                         </div>
                         <!-- content-3 end -->
