--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                                 ¿Qué obtengo?
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">Un
-                                Informe detallado de la propiedad, donde sabrás quién es el dueño actual y si hay hipotecas o prohibiciones que afectan al
-                                bien raíz. Podrás revisar si existen deudas asociadas o futuras
-                                expropiaciones, entre más información.</p>
+                                Informe detallado con el que conocerás la situación actual de la propiedad. Quién es el dueño y si hay hipotecas o prohibiciones que afectan al
+                                bien raíz. También podrás revisar si existen deudas asociadas o futuras
+                                expropiaciones, entre otros datos.</p>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-15 pr-xl-7 pr-lg-0 pr-md-0 pr-sm-6">
                                 ¿Es como un estudio de títulos? Sí, pero todo en un Informe más rápido y aterrizado. Nos conectamos a fuentes oficiales y analizamos la información bajo la lupa de nuestros abogados. </p>
                             <!-- content-3 section-title end -->
@@ -260,7 +260,7 @@
                                         Revisa qué documentos te enviamos
                                     </h2>
                                     <p class="font-size-9 letter-spacing-np4 gr-color-white-opacity-9 mb-lg-15 px-lg-9">
-                                        Además de nuestro Informe, te enviaremos los siguientes documentos que puedes necesitar si vas a tramitar un crédito hipotecario. 
+                                        Además de nuestro Informe, te enviaremos todos los documentos que recopilemos y que puedes necesitar.
                                     </p>
                                 </div>
                                 <!-- content-1 section-title end -->
