--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="col-lg-8 col-md-8 col-sm-10 pr-md-6 pr-sm-0">
                                 <p
                                     class="font-size-9 letter-spacing-np4 line-height-1p714 position-relative pr-xl-14 pr-lg-0 pr-md-9 pl-lg-11 pl-9">
-                                    Conoce el historial completo de la propiedad que estás buscando y toma una decisión segura con el Informe de Lesly.<span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
+                                    Conoce el historial completo de la propiedad que estás buscando y toma una decisiones más seguras con el Informe de Lesly.<span class="pos-abs-tl px-1 h-50 bg-selago-2"></span>
                                 </p>
                             </div>
                             <!-- hero area content end -->
@@ -151,7 +151,7 @@
                             <!-- content-1 section-title start -->
                             <h2
                                 class="font-size-14 font-family-1 letter-spacing-n2p53 line-height-1p3 font-wieght-bold mb-lg-13 mb-7 pr-xl-0 pr-lg-9 pr-md-9 pr-sm-19">
-                                Te entregamos en pocos días un Informe con todos los antecedentes de la propiedad
+                                Agrupamos los antecedentes de tu propiedad en un Informe y te la entregamos en pocos días
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-11 pr-lg-12">Recopilamos y evaluamos la
                                 documentación que necesitas en menos de una semana para que no tengas que hacerlo, solo ingresando la dirección que quieres consultar. 
