--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <!-- content-1 section-title start -->
                             <h2
                                 class="font-size-14 font-family-1 letter-spacing-n2p53 line-height-1p3 font-wieght-bold mb-lg-13 mb-7 pr-xl-0 pr-lg-9 pr-md-9 pr-sm-19">
-                                Agrupamos los antecedentes de tu propiedad en un Informe y te la entregamos en pocos días
+                                Agrupamos los antecedentes de tu propiedad y te la entregamos en pocos días
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-11 pr-lg-12">Recopilamos y evaluamos la
                                 documentación que necesitas en menos de una semana para que no tengas que hacerlo, solo ingresando la dirección que quieres consultar. 
