--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 Agrupamos los antecedentes de tu propiedad y la enviamos en pocos días
                             </h2>
                             <p class="font-size-9 letter-spacing-np4 mb-10 mb-lg-11 pr-lg-12">Recopilamos y evaluamos la
-                                documentación que necesitas en menos de una semana para que no tengas que hacerlo, solo ingresando la dirección que quieres consultar. 
+                                documentación que necesitas en menos de una semana para que no tengas que hacerlo. Solo ingresando la dirección que quieres consultar. 
                             <p>
                                 <!-- content-1 section-title end -->
                         </div>
