--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            3. Certificado de deuda contribuciones y comprobante pago última cuota.</h5>
+                                            3. Certificado de deuda contribuciones.</h5>
 
                                     </div>
                                     <!-- media-body end -->
@@ -339,7 +339,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            5. Certificado de no expropiación Servicio de Vivienda y Urbanismo.</h5>
+                                            5. Certificado de no expropiación.</h5>
 
                                     </div>
                                     <!-- media-body end -->
@@ -354,7 +354,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            6. Certificado de no expropiación municipal.</h5>
+                                            6. Certificado de afectación a utilidad pública.</h5>
 
                                     </div>
                                     <!-- media-body end -->
@@ -371,7 +371,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            7. Certificado de recepción municipal.</h5>
+                                            7. Certificado de recepción definitiva.</h5>
 
                                     </div>
                                     <!-- media-body end -->
@@ -386,7 +386,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            8. Certificado de número emitido por la municipalidad.</h5>
+                                            8. Certificado de número.</h5>
 
                                     </div>
                                     <!-- media-body end -->
