--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                     <div class="media-body pl-sm-8 pl-5">
                                         <h5
                                             class="font-size-9 font-family-1 font-wieght-bold text-white line-height-reset mt-0 mb-5">
-                                            10. Escrituras respectivas que acrediten personería si es el caso.</h5>
+                                            10. Escrituras que acrediten personería si es el caso.</h5>
 
                                     </div>
                                     <!-- media-body end -->
