--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         <div class="btn-area">
                             <a href="https://forms.gle/Xk1WaLEzaEy51aW3A" target="_blank"
                                 class="btn btn-xxl font-size-7 text-white letter-spacing-n1 font-weight-bold border-white border-width-2 text-capitalize mb-3"></i>Solicitar
-                                Servicio</a>
+                                Informe</a>
                         </div>
                     </div>
                 </div>
