--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                         <!-- hero area section title start -->
                         <h1
                             class="font-size-18 font-family-1 font-wieght-extra-bold heading-default-color letter-spacing-n3 line-height-1p228 mb-11 ">
-                            El estudio de tu propiedad en un Informe 
-                            y sin esperas</h1>
+                            El Informe de tu propiedad
+                            sin esperas</h1>
                         <!-- hero area section title end -->
                         <div class="row">
                             <!-- hero area content start -->
