--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <!-- hero area section title start -->
                         <h1
                             class="font-size-18 font-family-1 font-wieght-extra-bold heading-default-color letter-spacing-n3 line-height-1p228 mb-11 ">
-                            El Informe de tu propiedad
+                            El Informe de tu propiedad,
                             sin esperas</h1>
                         <!-- hero area section title end -->
                         <div class="row">
