--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                 <br>
                                 2021, Lesly SpA
                                 <br>
-                                hola@lesly.cl
+                                hola@getlesly.com
                             </div>
                             <!-- Brand Logo start-->
 
