--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="header-btns ml-auto pr-2 ml-lg-9 d-none d-xs-flex">
                         <a class="btn btn-lg-1 btn-dodgerblue border border-dodgerblue font-size-5 letter-spacing-n1"
-                            href="https://forms.gle/Xk1WaLEzaEy51aW3A" target="_blank">
+                            href="https://forms.gle/vkgzWDkreg6J9WwDA" target="_blank">
                             Solicitar
                         </a>
                     </div>
@@ -120,7 +120,7 @@
                             <!-- btn start -->
                             <div class="col-lg-4 col-md-4 col-sm-6 pl-md-0 pl-sm-12 flex-y-center">
                                 <a class="btn btn-xl btn-dodgerblue rounder-5 font-size-7 letter-spacing-np9 btn-lg px-lg-9 px-7 py-5 mb-md-0 mb-sm-8"
-                                    href="https://forms.gle/Xk1WaLEzaEy51aW3A" target="_blank">Solicita ahora</a>
+                                    href="https://forms.gle/vkgzWDkreg6J9WwDA" target="_blank">Solicita ahora</a>
                             </div>
                             <!-- btn end -->
                         </div>
@@ -449,7 +449,7 @@
                                 class="font-size-13">1,5 UF + iva.</span></h4>
                         <!-- features-1 section-title end -->
                         <div class="btn-area">
-                            <a href="https://forms.gle/Xk1WaLEzaEy51aW3A" target="_blank"
+                            <a href="https://forms.gle/vkgzWDkreg6J9WwDA" target="_blank"
                                 class="btn btn-xxl font-size-7 text-white letter-spacing-n1 font-weight-bold border-white border-width-2 text-capitalize mb-3"></i>Solicitar
                                 Informe</a>
                         </div>
